# tiny-rnn

./: .gitignore  .gitmodules  .travis.yml  README.md
Projects/CMake/: CMakeLists.txt
Projects/Introjucer/: TinyRNN.jucer
Projects/LinuxMakefile/: Makefile
Projects/MacOSX/TinyRNN.xcodeproj/: project.pbxproj
Projects/MacOSX/TinyRNN.xcodeproj/project.xcworkspace/xcshareddata/: TinyRNN.xccheckout  TinyRNN.xcscmblueprint
Projects/MacOSX/TinyRNN.xcodeproj/xcuserdata/peterrudenko.xcuserdatad/xcschemes/: TinyRNN (ConsoleApp).xcscheme  TinyRNN.xcscheme  xcschememanagement.plist
Source/: Common.h  HardcodedNetwork.h  HardcodedNeuron.h  HardcodedTrainingContext.h  Id.h  Layer.h  Network.h  Neuron.h  ScopedMemoryBlock.h  ScopedSubscription.h  ScopedTimer.h  SerializationContext.h  SerializationKeys.h  SerializedObject.h  Serializer.h  TinyRNN.h  TrainingContext.h  UnrolledNetwork.h  UnrolledNeuron.h  UnrolledTrainingContext.h  Uuid.h  VMNetwork.h  VMNeuron.h
Tests/: Helpers.h  LayerTests.cpp  Main.cpp  NetworkTests.cpp  NeuronTests.cpp  SerializationTests.cpp  TrainingTests.cpp
